# confidential-computing-cvm-guest-attestation-2

cvm-securekey-release-app/: AttestationUtil.cpp  CMakeLists.txt  README.md
